--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,20 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Погрузитесь в мир логических настольных игр вместе с друзьями! Ничего не сможет остановить на пути к развлечению. Никакой регистрации, авторизации, рекламы на нашем ресурсе и при этом совершенно бесплатно!" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <script type="text/javascript">
+    
+    (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+      
+    </script>    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Логические игры</title>
   </head>
