--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Погрузитесь в мир логических настольных игр вместе с друзьями! Ничего не сможет остановить на пути к развлечению. Никакой регистрации, авторизации, рекламы на нашем ресурсе и при этом совершенно бесплатно!" />
+    <meta name="description" content="Погрузитесь в мир логических настольных игр вместе с друзьями! У нас лучшие логические совместные игры. Никакой регистрации, авторизации, рекламы на нашем ресурсе и при этом совершенно бесплатно! Множество различных миниигр: крестики-нолики, гомоку, реверси, сапёр на скорость" />
+    <meta name="keywords" content="играть онлайн, крестики, нолики, реверси, игры, бесплатно, без регистрации, без смс, без авторизации, tictactoe, ti tac toe, гомоку, риверси, ревирси, сапёр, играть, онлайн, миниигры, с друзьями, без рекламы, совместно" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script type="text/javascript">
     
@@ -22,7 +23,7 @@
       
     </script>    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Логические игры</title>
+    <title>Логические онлайн игры - games.ionquen.ru</title>
   </head>
   <body>
     <noscript>Включите JavaScript для корректной работы сайта</noscript>
