--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Погрузитесь в мир логических настольных игр вместе с друзьями!  У нас лучшие логические совместные игры. Никакой регистрации, авторизации, рекламы на нашем ресурсе и при этом совершенно бесплатно! Множество различных миниигр: крестики-нолики, гомоку, реверси, сапёр на скорость" />
     <meta name="keywords" content="играть онлайн, крестики, нолики, реверси, игры, бесплатно, без регистрации, без смс, без авторизации, tictactoe, ti tac toe, гомоку, риверси, ревирси, сапёр, играть, онлайн, миниигры, с друзьями, без рекламы, совместно" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script type="text/javascript">
     
     (function(l) {
